tests/paczka1/fuzzy1/17338691.err
Error in line 2: A767 A482 81,6
Error in line 4: Sn03Lc S206 86,6
Error in line 10: s5MwByUoT A482 92,7
Error in line 14: s5MwByUoT A767 16,0
Error in line 15: s5MwByUoT S45 74,2
Error in line 25: Sn03Lc A767 19,0
Error in line 19: sa6 A482 21,2
Error in line 27: sa6 S206 70,5
Error in line 24: cu540 S206 2,2
